@startuml

@startuml

' ------ الكلاسات الأساسية (Repository و Service) ------ '
class AlertTypeRepository {
  + create()
  + get_by_id()
  + get_all()
  + update()
  + delete()
}

class AlertRepository {
  + create()
  + get_alert_devices()
  + get_alert_details()
  + mark_alerts_as_read()
  + get_student_cheating_reports()
  + get_college_cheating_stats()
  + get_major_level_stats()
  + get_course_cheating_stats()
  + delete()
  + delete_multiple_alerts()
}

class AlertService {
  + create_alert()
  + get_alert_devices()
  + get_and_mark_alerts()
  + get_student_cheating_reports()
  + get_college_cheating_stats()
  + get_major_level_stats()
  + get_course_stats()
  + delete_alerts()
  + delete_multiple_alerts()
}

class AlertTypeService {
  + create_alert_type()
  + get_alert_type()
  + get_all_alert_types()
  + update_alert_type()
  + delete_alert_type()
}

' ------ كلاسات الراوت (Routes) ------ '
class "AlertRoutes" << (R,lightblue) Route >> {
  __Endpoints__
  + POST /alerts
  + GET /alerts/devices
  + POST /alerts/mark-and-get
  + GET /alerts/<student_id>/cheating-reports
  + GET /alerts/alerts-colleges
  + GET /alerts/alerts-major-level
  + GET /alerts/course-stats
  + DELETE /alerts
  + POST /alerts/delete-multiple
}

class "AlertTypeRoutes" << (R,lightblue) Route >> {
  __Endpoints__
  + POST /alert-types
  + GET /alert-types/<id>
  + GET /alert-types
  + PUT /alert-types/<id>
  + DELETE /alert-types/<id>
}

' ------ العلاقات بين الكلاسات ------ '
AlertService --> AlertRepository : "uses"
AlertService --> AlertTypeRepository : "uses"
AlertTypeService --> AlertTypeRepository : "uses"

AlertRoutes ..> AlertService : "invokes"
AlertTypeRoutes ..> AlertTypeService : "invokes"

' ------ الملاحظات التوضيحية ------ '
note top of AlertRoutes
  <<Route>>
  URL Prefix: /api/alerts
  Handles all alert-related operations
  Uses Swagger for documentation
end note

note top of AlertTypeRoutes
  <<Route>>
  URL Prefix: /api/alert-types
  Manages alert type definitions
end note





@enduml